# mybot

./: .gitmodules
mybot/: CMakeLists.txt  package.xml
mybot_app/: CMakeLists.txt  package.xml
mybot_app/launch/: follower.launch  follower2.launch  head_tracker_app.launch  object_follower.launch  object_tracker.launch
mybot_bringup/: CMakeLists.txt  package.xml
mybot_bringup/launch/: calibrate.launch  fake_pi_robot.launch  fake_turtlebot.launch  fake_turtlebot_with_head.launch  odom_ekf.launch  openni_driver.launch  turtlebot_carpet_create.launch  turtlebot_minimal_create.launch
mybot_description/: CMakeLists.txt  package.xml
mybot_description/launch/: test_pi_robot.launch  test_turtlebot_with_head.launch
mybot_description/urdf/: arm.xacro  arm_hardware.xacro  head.xacro  head_hardware.xacro  pi_robot.urdf  pi_robot.xacro  pi_robot_arm.xacro  pi_robot_arm_hardware.xacro  pi_robot_head.xacro  pi_robot_head_hardware.xacro  turtlebot.urdf.xacro  turtlebot.xacro  turtlebot_body.urdf.xacro  turtlebot_hardware.urdf.xacro  turtlebot_hardware.xacro  turtlebot_kinect.urdf.xacro  turtlebot_with_head.xacro
mybot_dynamixels/: CMakeLists.txt  package.xml
mybot_dynamixels/launch/: dynamixels.launch  head_tracker.launch  head_tracker_qvga.launch
mybot_nav/: CMakeLists.txt  nav.rviz  package.xml  setup.py
mybot_nav/cfg/: CalibrateAngular.cfg  CalibrateLinear.cfg
mybot_nav/launch/: fake_amcl.launch  (+16 more)
mybot_pathplanning/: CMakeLists.txt  package.xml  setup.py
mybot_speech/: CMakeLists.txt  package.xml
mybot_vision/: CMakeLists.txt  package.xml  setup.py
(+61 files in other folders)
