<package>
  <name>mybot</name>
  <version>0.4.0</version>
  <description>ROS By Example Volume 1</description>
  <maintainer email="patrick@pirobot.org">Patrick Goebel</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rbx_vol_1</url>

  <url type="bugtracker">https://github.com/pirobot/mybot/issues</url>

  <author email="patrick@pirobot.org">Maintained by Patrick Goebel</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>mybot_description</run_depend>
  <run_depend>mybot_speech</run_depend>
  <run_depend>mybot_dynamixels</run_depend>
  <run_depend>mybot_nav</run_depend>
  <run_depend>mybot_apps</run_depend>
  <run_depend>mybot_bringup</run_depend>
  <run_depend>mybot_vision</run_depend>
  <run_depend>mybot_pathplanning</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
